--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
 	"jest": {
 		"testEnvironment": "node"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LambdaSchool/Server-Testing.git"
-	},
+	"repository": "git+https://github.com/LambdaSchool/Server-Testing.git",
 	"keywords": [],
-	"author": "",
+	"author": "BryceEvans <evans.bryce@gmail.com>",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/LambdaSchool/Server-Testing/issues"
@@ -22,9 +19,13 @@
 	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
 	"devDependencies": {
 		"jest": "^23.6.0",
+		"nodemon": "^1.18.9",
 		"supertest": "^3.3.0"
 	},
 	"dependencies": {
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"knex": "^0.16.3",
+		"node": "^11.9.0",
+		"sqlite3": "^4.0.6"
 	}
 }
